# examples

./: .gitignore  README.txt  log.c  log.cpp  log4cplusAdapter.cpp  log4cplusAdapterWrapper.cpp  log4cplusAdapterWrapper.h
c_wrapper/: CMakeLists.txt  README.txt  log4cplusAdapter.h
